--- a/styles.css
+++ b/styles.css
@@ -3,7 +3,9 @@
 }
 
 .title {
-  font-size: 200%;
+  font-size: 200px;
+  font-weight: 600;
+  text-tranform: uppercase;
   color: blue;
   text-align: center;
 }
