--- a/styles.css
+++ b/styles.css
@@ -13,6 +13,7 @@
 
 .section1 {
   background-image: url(lapka.jpg);
+  background-repeat: repeat;
   display: inline;
   padding: 50;
   border: 5px, white
