--- a/styles.css
+++ b/styles.css
@@ -17,7 +17,10 @@
   background-position: top center;
   display: inline;
   padding: 50;
-  border: 5px, white
-  
+  border: 5px, white 
 }
 
+.section2 {
+  background: rgb(185,174,166);
+  background: radial-gradient(circle, rgba(185,174,166,1) 0%, rgba(106,102,99,1) 30%, rgba(25,25,23,1) 100%);
+}
