--- a/styles.css
+++ b/styles.css
@@ -12,7 +12,7 @@
 }
 
 .section1 {
-  background-image: url(lapka.jpg);
+  background-image: "lapka.jpg";
   background-repeat: repeat;
   background-position: top center;
   display: inline;
