--- a/styles.css
+++ b/styles.css
@@ -17,7 +17,7 @@
   background-position: top center;
   display: inline;
   padding: 50;
-  border: 10px, white;
+  border: 5px white;
 }
 
 .section2 {
