--- a/styles.css
+++ b/styles.css
@@ -12,12 +12,12 @@
 }
 
 .section1 {
-  background-image: "lapka.jpg";
+  background-image: url("lapka.jpg");
   background-repeat: repeat;
   background-position: top center;
   display: inline;
-  padding: 50;
-  border: 5px white;
+  padding: 50px;
+  border: 5px solid white;
 }
 
 .section2 {
