--- a/styles.css
+++ b/styles.css
@@ -23,4 +23,5 @@
 .section2 {
   background: rgb(185,174,166);
   background: radial-gradient(circle, rgba(185,174,166,1) 0%, rgba(106,102,99,1) 30%, rgba(25,25,23,1) 100%);
+  border: 5px black;
 }
