--- a/styles.css
+++ b/styles.css
@@ -20,6 +20,12 @@
   border: 5px solid white;
 }
 
+h2.section1 {
+  font-size: 20px;
+  font-weight: 200;
+  color: #0718f3;
+}
+
 .section2 {
   background: rgb(185,174,166);
   background: radial-gradient(circle, rgba(185,174,166,1) 0%, rgba(106,102,99,1) 30%, rgba(25,25,23,1) 100%);
