--- a/styles.css
+++ b/styles.css
@@ -21,9 +21,9 @@
 }
 
 h2.section1 {
-  font-size: 20px;
-  font-weight: 200;
-  color: #0718f3;
+  font-size: 50px;
+  font-weight: 300;
+  color: #353535;
 }
 
 .section2 {
