--- a/styles.css
+++ b/styles.css
@@ -31,3 +31,9 @@ h2.section1 {
   background: radial-gradient(circle, rgba(185,174,166,1) 0%, rgba(106,102,99,1) 30%, rgba(25,25,23,1) 100%);
   border: 5px black;
 }
+
+figure.section2 {
+  width: 200px;
+  height: 200px;
+  object-fit: cover;
+}
