--- a/styles.css
+++ b/styles.css
@@ -20,9 +20,9 @@
 }
 
 h2.section1 {
-  font-size: 50px;
+  font-size: 80px;
   font-weight: 300;
-  color: #353535;
+  color: #1616b3;
 }
 
 .section2 {
