--- a/styles.css
+++ b/styles.css
@@ -25,6 +25,12 @@
   color: #1616b3;
 }
 
+.section1 p {
+  font-size: 50px;
+  font-weight: 300;
+  color: #1616b3;
+}
+
 .section2 {
   background: rgb(185,174,166);
   background: radial-gradient(circle, rgba(185,174,166,1) 0%, rgba(106,102,99,1) 30%, rgba(25,25,23,1) 100%);
