--- a/styles.css
+++ b/styles.css
@@ -23,12 +23,14 @@
   font-size: 80px;
   font-weight: 300;
   color: #1616b3;
+  opacity: 0.7;
 }
 
 .section1 p {
   font-size: 50px;
   font-weight: 300;
   color: #1616b3;
+  opacity: 0.7;
 }
 
 .section2 {
