--- a/styles.css
+++ b/styles.css
@@ -26,6 +26,13 @@
   opacity: 1;
 }
 
+.section1 a {
+  width: 200px;
+  height: 200px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
 .section1 p {
   font-size: 30px;
   font-weight: 300;
