--- a/styles.css
+++ b/styles.css
@@ -23,6 +23,15 @@
   font-size: 50px;
   font-weight: 300;
   color: #1616b3;
+  padding: 10px;
+  opacity: 1;
+}
+
+.section1 p {
+  font-size: 30px;
+  font-weight: 300;
+  color: #1616b3;
+  padding: 10px;
   opacity: 1;
 }
 
@@ -31,13 +40,7 @@
   height: 200px;
   margin-left: auto;
   margin-right: auto;
-}
-
-.section1 p {
-  font-size: 30px;
-  font-weight: 300;
-  color: #1616b3;
-  opacity: 1;
+  padding: 10px;
 }
 
 .section2 {
