--- a/styles.css
+++ b/styles.css
@@ -56,7 +56,7 @@ figure.section2 {
 }
 
 .love, .hate {
-  display: inline-block;
+  display: inline;
   border: 10px solid blue;
-  margin: 20px;
+  margin: 10px;
 }
