--- a/styles.css
+++ b/styles.css
@@ -46,7 +46,8 @@
 .section2 {
   background: rgb(185,174,166);
   background: radial-gradient(circle, rgba(185,174,166,1) 0%, rgba(106,102,99,1) 30%, rgba(25,25,23,1) 100%);
-  border: 5px black;
+  padding: 10px;
+  border: 10px black;
 }
 
 .love, .hate {
