--- a/styles.css
+++ b/styles.css
@@ -38,9 +38,10 @@
 .section1 a {
   width: 200px;
   height: 200px;
+  display: block
   margin-left: auto;
   margin-right: auto;
-  padding: 10px;
+  padding: 5px;
 }
 
 .section2 {
