--- a/styles.css
+++ b/styles.css
@@ -38,7 +38,7 @@
 .section1 a {
   width: 200px;
   height: 200px;
-  display: block
+  display: block;
   margin-left: auto;
   margin-right: auto;
   padding: 5px;
