--- a/styles.css
+++ b/styles.css
@@ -24,7 +24,7 @@
   font-weight: 300;
   color: #1616b3;
   padding: 5px;
-  opacity: 0,5;
+  background-color: transparent;
 }
 
 .section1 p {
@@ -32,7 +32,7 @@
   font-weight: 300;
   color: #1616b3;
   padding: 5px;
-  opacity: 0,5;
+  background-color: transparent;
 }
 
 .section1 a {
