--- a/styles.css
+++ b/styles.css
@@ -55,7 +55,8 @@
   display: inline-block;
   border: 10px solid blue;
   padding: 10px;
-  margin: 10px;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .section2 img {
