--- a/styles.css
+++ b/styles.css
@@ -21,7 +21,7 @@
 
 .section1 h2 {
   font-size: 30px;
-  font-weight: 300;
+  font-weight: 500;
   color: #1616b3;
   padding: 5px;
   background-color: transparent;
@@ -29,7 +29,7 @@
 
 .section1 p {
   font-size: 20px;
-  font-weight: 300;
+  font-weight: 400;
   color: #1616b3;
   padding: 5px;
   background-color: transparent;
@@ -67,4 +67,12 @@
   margin-left: auto;
   margin-right: auto;
   padding: 5px;
+}
+
+.love h3, .hate h3 {
+  font-size: 30px;
+  font-weight: 500;
+  color: #1616b3;
+  padding: 5px;
+  background-color: transparent;
 }
