--- a/styles.css
+++ b/styles.css
@@ -19,7 +19,7 @@
   border: 10px dashed grey;
 }
 
-.section1 h2 {
+.section1 h2, .section2 h3 {
   font-size: 30px;
   font-weight: 500;
   color: #1616b3;
@@ -27,7 +27,7 @@
   background-color: transparent;
 }
 
-.section1 p {
+.section1 p, .section2 li {
   font-size: 20px;
   font-weight: 400;
   color: #1616b3;
@@ -67,12 +67,4 @@
   margin-left: auto;
   margin-right: auto;
   padding: 5px;
-}
-
-.love h3, .hate h3 {
-  font-size: 30px;
-  font-weight: 500;
-  color: #1616b3;
-  padding: 5px;
-  background-color: transparent;
 }
