--- a/styles.css
+++ b/styles.css
@@ -53,7 +53,7 @@
 }
 
 .love, .hate {
-  display: inline-block;
+  float: left;
   border: 10px solid blue;
   padding: 10px;
   margin-left: auto;
@@ -69,3 +69,7 @@
   margin-right: auto;
   padding: 5px;
 }
+
+.section3 {
+  clear:both;
+}  
