--- a/styles.css
+++ b/styles.css
@@ -24,7 +24,7 @@
   font-size: 30px;
   font-weight: 500;
   color: #1616b3;
-  padding: 5px;
+  padding: 0, 5px, 5px, 5px;
   background-color: transparent;
 }
 
@@ -32,7 +32,7 @@
   font-size: 20px;
   font-weight: 400;
   color: #1616b3;
-  padding: 5px;
+  padding: 0, 5px, 5px, 5px;
   background-color: transparent;
 }
 
