--- a/styles.css
+++ b/styles.css
@@ -28,7 +28,7 @@
   background-color: transparent;
 }
 
-.section1 p, .section2 h3, .section2 li {
+.section1 p, .section2 h3{
   font-size: 20px;
   font-weight: 400;
   color: #1616b3;
@@ -36,12 +36,14 @@
   background-color: transparent;
 }
 
-.section1 img {
+.section1 img, .section2 img {
   width: 200px;
   height: 200px;
+  object-fit: cover;
   display: block;
   margin-left: auto;
   margin-right: auto;
+  padding: 5px;
 }
 
 .section2 {
@@ -58,16 +60,15 @@
   padding: 10px;
   margin-left: auto;
   margin-right: auto;
+  background-color: transparent;
 }
 
-.section2 img {
-  width: 200px;
-  height: 200px;
-  object-fit: cover;
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-  padding: 5px;
+.section2 li{
+  font-size: 15px;
+  font-weight: 300;
+  color: #1616b3;
+  padding: 0, 5px, 5px, 5px;
+  background-color: transparent;
 }
 
 .section3 {
