--- a/styles.css
+++ b/styles.css
@@ -41,8 +41,8 @@
   height: 200px;
   object-fit: cover;
   display: block;
-  margin-left: auto;
-  margin-right: auto;
+  margin-left: 0 auto;
+  margin-right: 0 auto;
   padding: 5px;
 }
 
