--- a/styles.css
+++ b/styles.css
@@ -52,6 +52,9 @@
   padding: 10px;
   border: 10px double black;
   margin: 10px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .love, .hate {
