--- a/styles.css
+++ b/styles.css
@@ -24,6 +24,7 @@
   font-size: 30px;
   font-weight: 500;
   color: #1616b3;
+  text-align: center;
   padding: 0, 5px, 5px, 5px;
   background-color: transparent;
 }
@@ -65,7 +66,7 @@
   background-color: transparent;
 }
 
-.section2 ol, .section2 ul, .section2 li {
+.section2 ol, .section2 ul, .section2 li, .section figcaption {
   font-size: 15px;
   font-weight: 300;
   color: #1616b3;
