--- a/styles.css
+++ b/styles.css
@@ -57,10 +57,8 @@
 
 .love, .hate {
   display: inline-block;
-  margin-left: 0 auto;
-  margin-right: 0 auto;
-  justify-content: center;
-  align-items: center;
+  margin: 0 auto;
+  width: 40%;
   border: 5px dotted grey;
   padding: 10px;
   background-color: transparent;
