--- a/styles.css
+++ b/styles.css
@@ -64,7 +64,7 @@
   background-color: transparent;
 }
 
-.section2 ol, .section2 ul, .section2 li, .section figure, .section figcaption {
+.section2 ol, .section2 ul, .section2 li, .section2 figure, .section2 figcaption {
   font-size: 15px;
   font-weight: 300;
   color: #1616b3;
