--- a/styles.css
+++ b/styles.css
@@ -53,6 +53,8 @@
   padding: 10px;
   border: 10px double black;
   margin: 5px;
+  justify-content: center;
+  align-items: center;
 }
 
 .love, .hate {
