--- a/styles.css
+++ b/styles.css
@@ -102,3 +102,10 @@ fieldset {
   border-color: #FF0000;
   background-color: #FFFFFF;
 }
+
+footer p {
+  font-size: 20px;
+  color: #15266e;
+  text-align: center;
+  padding: 10px;
+}
