--- a/styles.css
+++ b/styles.css
@@ -66,13 +66,16 @@
   background-color: transparent;
 }
 
-.section2 ol, .section2 ul, .section2 li, .section2 figure, .section2 figcaption {
+.section2 ol, .section2 ul, .section2 li, .section2 figure, .section2 figcaption, .section2 strong, .section2 em {
   font-size: 15px;
   font-weight: 300;
   color: #1616b3;
-  text-align: center;
   padding: 0, 5px, 5px, 5px;
   background-color: transparent;
+}
+
+.section2 figcaption {
+text-align: center;
 }
 
 .section3 {
