--- a/styles.css
+++ b/styles.css
@@ -103,6 +103,7 @@ fieldset {
 .button-container button {
   display: inline-block;
   border: 2px solid #555555;
+  border-radius: 30px;
   padding: 10px 20px;
   text-decoration: none;
   color: #333333;
