--- a/styles.css
+++ b/styles.css
@@ -85,6 +85,9 @@ text-align: center;
   padding: 10px;
   border: 10px dashed grey;
   margin: 5px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }  
 
 fieldset {
@@ -98,6 +101,7 @@ fieldset {
 
 .button-container {
   margin-top: 20px;
+  background-color: transparent;
 }
 .button-container button {
   display: inline-block;
