--- a/styles.css
+++ b/styles.css
@@ -56,7 +56,9 @@
   
   .love, .hate {
     display: inline-block;
-    margin: 0 auto;
+    width: 30%;
+    margin: 5px 30px 5px 180px;
+    box-sizing: border-box;
     border: 5px dotted grey;
     padding: 10px;
     background-color: transparent;
@@ -84,12 +86,15 @@
   
   fieldset {
     display: inline-block;
-    margin: 0 auto;
+    width: 30%;
+    margin: 5px 30px 5px 180px;
+    box-sizing: border-box;
     background-color: transparent;
   }
   
   .button-container {
     margin-top: 20px;
+    margin-left: 600px;
     background-color: transparent;
   }
   .button-container button {
@@ -106,7 +111,7 @@
     background-color: #FFFFFF;
   }
   
-  footer {
+  footer p {
     font-size: 10px;
     color: #15266e;
     text-align: center;
