--- a/styles.css
+++ b/styles.css
@@ -32,6 +32,7 @@
     font-size: 20px;
     font-weight: 400;
     color: #1616b3;
+    text-align: center;
     padding: 5px, 5px, 5px, 5px;
     background-color: transparent;
   }
@@ -86,8 +87,8 @@
   
   fieldset {
     display: inline-block;
-    width: 30%;
-    margin: 0 9.5%;
+    width: 40%;
+    margin: 0 4.5%;
     box-sizing: border-box;
     background-color: transparent;
   }
