--- a/styles.css
+++ b/styles.css
@@ -95,7 +95,7 @@
   
   .button-container {
     margin-top: 20px;
-    margin-left: 600px;
+    margin-left: 42%;
     background-color: transparent;
   }
   .button-container button {
