--- a/styles.css
+++ b/styles.css
@@ -31,12 +31,15 @@
   .section1 p, .section2 h3, .section3 legend {
     font-size: 20px;
     font-weight: 400;
-    color: #1616b3;
     text-align: center;
     padding: 5px, 5px, 5px, 5px;
     background-color: transparent;
   }
-  
+
+.section2 h3, .section3 legend {
+     color: #1616b3;
+}
+    
   .section1 img, .section2 img {
     width: 200px;
     height: 200px;
@@ -67,7 +70,6 @@
   
   .section2 ol, .section2 ul, .section2 li, .section2 figure, .section2 figcaption, .section2 strong, .section2 em {
     font-size: 15px;
-    color: #1616b3;
     padding: 0, 5px, 5px, 5px;
     background-color: transparent;
   }
